# Wobble

./: CMakeLists.txt  KEYWORDS  README.md  Wobble.cpp  Wobble.h  Wobble.kdev4  WobbleConfig.cmake.in  WobbleConfigVersion.cmake.in  main.cpp
cmake/: FindYAML.cmake  FindYAML.cmake~
src/: CMakeLists.txt  Doxyfile.in
src/app/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
src/core/: CMakeLists.txt  class.cpp  class.h  class_p.h  command.cpp  command.h  command_p.h  common.cpp  common.h  config.h.in  copy-class.sh  function.cpp  function.h  function_p.h  global.h  identifier.cpp  identifier.h  identifier_p.h  input.cpp  input.h  output.cpp  output.h  plugins.cpp  plugins.h  project.cpp  project.h  project_p.h  query.cpp  query.h  query_p.h  resource.cpp  resource.h  resource_p.h  type.cpp  type.h  type_p.h  variable.cpp  variable.h  variable_p.h  view.cpp  (+4 more)
src/inputs/: CMakeLists.txt
src/inputs/yaml/: CMakeLists.txt  yamlinput.cpp  yamlinput.h
src/outputs/: CMakeLists.txt
src/outputs/android/: CMakeLists.txt
src/outputs/cpp/: CMakeLists.txt  cppoutput.cpp  cppoutput.h
src/outputs/cpp/filters/: CMakeLists.txt  cpplibrary.cpp  cpplibrary.h
src/outputs/cpp/templates/: CMakeLists.top  CMakeLists.txt  class.cpp  class.h  class_p.h  main.cpp
src/outputs/cpp/templates/src/: CMakeLists.txt  class.h  main.cpp
src/outputs/debug/: CMakeLists.txt  debugoutput.cpp  debugoutput.h
src/outputs/django/: CMakeLists.txt  djangooutput.cpp  djangooutput.h  djangowriter.cpp  djangowriter.h
src/outputs/django/filters/: CMakeLists.txt  djangofilters.cpp  djangofilters.h
src/outputs/django/templates/: models.py  views.py
src/utils/: CMakeLists.txt  codewriter.cpp  codewriter.h  defaultparser.cpp  defaultparser.h  formatter.h  parser.h  templates.cpp  templates.h
test/: CMakeLists.txt  hierarchytest.cpp  hierarchytest.h  ntasks.yaml  plugintest.cpp  plugintest.h  yamltest.cpp  yamltest.h  zoo.yaml  zoo.yaml~
